--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "Promise": "^1.0.5",
     "aws-sdk": "^2.452.0",
+    "axios": "^0.21.1",
     "binary-extensions": "^1.11.0",
     "body-parser": "^1.18.0",
     "capitalize": "^1.0.0",
