--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 {
-  "apiUrl": "http://api.magazine.harriman.danmccarey.com/rest"
+  "apiUrl": "https://api.magazine.harriman.danmccarey.com/rest"
 }
